# taxi

./: CMakeLists.txt  README.md  deploy.sh
benchmarks/: sleepService.cpp
common/: exceptions.h  httpStatuses.h  requestHandler.h
configs/: basic.xml
data/: CMakeLists.txt  JSONPresentation.cpp  JSONPresentation.h  document.h  documentPresentation.h  jsonPresentation.cpp  jsonPresentation.h
db/: CMakeLists.txt  DatabaseComponent.h  OrdersRepositoryMongoDB.cpp  OrdersRepositoryMongoDB.h  ordersExceptions.h  ordersRepository.h
db/mongodb/: mongodbComponent.cpp  mongodbComponentConfig.h  ordersRepositoryMongoDB.cpp  ordersRepositoryMongoDB.h  ordersSimpleRequests.cpp  ordersSimpleRequests.h  promo.h
i18n/: Messages.cpp  Messages.h
json/: json.hpp
python/: mongoRequest.py  mongotest.py  ordersClientTests.py
services/: CMakeLists.txt  orders.cpp  ordersExceptions.h  ordersHandlers.cpp
tests/: CMakeLists.txt  concTest.cpp  jsonTests.cpp  mongodbTests.cpp  ordersServiceTests.cpp
tests/mongodb/: OrdersRepositoryConcurrentTests.cpp  OrdersRepositoryTests.cpp  OrdersSimpleRequestsTests.cpp
